# karpo-agent-context

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  claude-code-action.yml
docs/: architecture.mmd
karpo_context/: __init__.py  budget.py  config.py  defaults.py  manager.py  models.py  pipeline.py
karpo_context/compaction/: base.py  message_count.py  summarizer.py
karpo_context/store/: base.py  redis_store.py  session_store.py
tests/: test_budget.py  test_compaction.py  test_config.py  test_exports.py  test_integration.py  test_manager.py  test_models.py  test_pipeline.py  test_session_state.py  test_session_store.py  test_store.py
